--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed": "tsx src/lib/seed/index.ts"
   },
   "dependencies": {
     "@radix-ui/react-label": "^2.1.2",
@@ -16,6 +17,8 @@
     "@supabase/supabase-js": "^2.48.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
+    "langchain": "^0.3.19",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
     "openai": "^4.85.3",
@@ -33,6 +36,7 @@
     "eslint-config-next": "15.1.7",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "tsx": "^4.19.3",
     "typescript": "^5"
   }
 }
